Refine css styling for main container

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
           <span class="counter">140</span>
         </form>
       </section>
+
+      <section id="tweets">
+
+      </section>
+
     </main>
 
   </body>
