--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,18 @@
       </section>
 
       <section id="tweets">
-
+        <article class="tweet">
+          <header>
+            <img src="https://vanillicon.com/d55cf8e18b47d4baaf60c006a0de39e1_50.png">
+            <h2 class="author-name">Author Name</h2>
+            <div class="author-handle">@handle</div>
+          </header>
+          <div class="tweet-body">Tweet body this will have to be displayed on several lines so adding some content here</div>
+          <footer>
+            <div class="date-posted">10 days ago</div>
+            <div class="icons"></div>
+          </footer>
+        </article>
       </section>
 
     </main>
