Add refactor css styling

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,11 @@
           <div class="tweet-body">Tweet body this will have to be displayed on several lines so adding some content here</div>
           <footer>
             <div class="date-posted">10 days ago</div>
-            <div class="icons"></div>
+            <div class="icons">
+              <i></i>
+              <i></i>
+              <i></i>
+            </div>
           </footer>
         </article>
       </section>
