--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
     <!-- New tweet CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+    <!-- Use FontAwesome for icons-->
+    <script src="https://use.fontawesome.com/2f99eb8d90.js"></script>
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -60,9 +63,9 @@
           <footer>
             <div class="date-posted">10 days ago</div>
             <div class="icons">
-              <i></i>
-              <i></i>
-              <i></i>
+              <i class="fa fa-flag" aria-hidden="true"></i>
+              <i class="fa fa-retweet" aria-hidden="true"></i>
+              <i class="fa fa-heart" aria-hidden="true"></i>
             </div>
           </footer>
         </article>
