Create a new tweet programatically

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         </form>
       </section>
 
-      <section id="tweets">
+      <section id="tweets-container">
         <article class="tweet">
           <header>
             <img src="https://vanillicon.com/d55cf8e18b47d4baaf60c006a0de39e1_50.png">
