Use jquery library to display date

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
 
+    <!-- Moment JS and timestamp JS to display date-->
+    <script type="text/javascript" src="/scripts/moment.js"></script>
+    <script type="text/javascript" src="/scripts/livestamp.min.js"></script>
+
     <!-- Character counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
@@ -53,22 +57,6 @@
       </section>
 
       <section id="tweets-container">
-        <article class="tweet">
-          <header>
-            <img src="https://vanillicon.com/d55cf8e18b47d4baaf60c006a0de39e1_50.png">
-            <h2 class="author-name">Author Name</h2>
-            <div class="author-handle">@handle</div>
-          </header>
-          <div class="tweet-body">Tweet body this will have to be displayed on several lines so adding some content here</div>
-          <footer>
-            <div class="date-posted">10 days ago</div>
-            <div class="icons">
-              <i class="fa fa-flag" aria-hidden="true"></i>
-              <i class="fa fa-retweet" aria-hidden="true"></i>
-              <i class="fa fa-heart" aria-hidden="true"></i>
-            </div>
-          </footer>
-        </article>
       </section>
 
     </main>
