Add Compose button styling

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button class="nav-bar-button">
+        <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+        <div>Compose</div>
+      </button>
     </nav>
 
     <!-- Page-specific (main) content here -->
