--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,8 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
 
-    <!-- Moment JS and timestamp JS to display date-->
+    <!-- Moment JS to display date-->
     <script type="text/javascript" src="/scripts/moment.js"></script>
-    <script type="text/javascript" src="/scripts/livestamp.min.js"></script>
 
     <!-- Character counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
